[build-system]
requires = ["setuptools>75.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "autocert"
version = "0.0.21"
authors = [
  { name="Chris Torok", email="torok.chris@gmail.com" },
]
description = "Automate your digital certificate workflows."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests >= 2.32.3",
    "cryptography >= 44.0.0"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = {file = "LICENSE"}

[project.urls]
Homepage = "https://github.com/thetisrock"
